--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,9 +1,16 @@
+@use 'variables';
+
 .hero {
     padding-top: 64px;
     padding-bottom: 100px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/hero-fundo.png);
+    background-image: linear-gradient(variables.$heroBg1, variables.$heroBg2), url(../images/hero-fundo.png);
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: 0;
+
+    .container {
+        position: relative;
+    }
 
     &__text {
         margin-top: 64px;
@@ -12,6 +19,8 @@
         line-height: 56px;
         font-weight: 700;
         text-align: center;
+        position: relative;
+        z-index: 2;
     }
 
     &__logo {
@@ -19,6 +28,19 @@
         height: 150px;
         display: block;
     }
+
+    &__backg {
+        position: absolute;
+        top: 220px;
+        left: 0;
+        width: 100%;
+        height: 400px;
+        background-image: linear-gradient(variables.$heroBackbg1, variables.$heroBackbg2), url(../images/bamboo-decoracao.png);
+        background-repeat: repeat-x;
+        background-size: auto 100%;
+        z-index: 1;
+        }
+    
 
     @media (max-width:640px) {
         padding: 40px;
@@ -32,5 +54,15 @@
             line-height: 24px;
             margin: 24px 0;
         }
+
+        &__backg {
+            top: 190px;
+
+        }
     }
+}
+
+.infos-bar {
+    position: relative;
+    z-index: 2;
 }
