--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -3,7 +3,7 @@
 .hero {
     padding-top: 64px;
     padding-bottom: 100px;
-    background-image: linear-gradient(variables.$heroBg1, variables.$heroBg2), url(../images/hero-fundo.png);
+    background-image: linear-gradient(variables.$heroBg1, variables.$heroBg2), url(../images/hero-fundo1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     z-index: 0;
@@ -35,7 +35,7 @@
         left: 0;
         width: 100%;
         height: 400px;
-        background-image: linear-gradient(variables.$heroBackbg1, variables.$heroBackbg2), url(../images/bamboo-decoracao.png);
+        background-image: linear-gradient(variables.$heroBackbg1, variables.$heroBackbg2), url(../images/hero-candle-dec.png);
         background-repeat: repeat-x;
         background-size: auto 100%;
         z-index: 1;
