--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -8,6 +8,9 @@
     text-align: center;
     white-space: nowrap;
     border-radius: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &--primary {
         background: linear-gradient(135deg, variables.$buttonBg1, variables.$buttonBg2);
@@ -15,9 +18,8 @@
     }
 
     @media (max-width: 640px) {
-        display: flex;
         width: 100%;
-        align-items: center;
+
 
         &__infos {
             display: block;
