--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -44,6 +44,7 @@
 
     @media (max-width:640px) {
         padding: 40px;
+        background-image: linear-gradient(variables.$heroBg1, variables.$heroBg2), url(../images/hero-bg-celular.jpg)
 
         &__logo {
             height: 40px 0;
