--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,7 @@
 body {
     background-color: variables.$mainBody1;
     animation: plantGrowth 10s infinite;
+    overflow-x: hidden;
 }
 
 @keyframes plantGrowth {
